@@ -338,3 +338,5 @@ Version 2.0.1
 + Add toList() API to Ruby.Enumerable
 
 + Add toMap() API to RubyHash
+
++ Add toSet() API to RubySet
